--- a/package.json
+++ b/package.json
@@ -4,15 +4,18 @@
   "main": "index.js",
   "license": "MIT",
   "scripts": {
+    "test": "jest",
     "build": "tsc",
     "start": "NODE_ENV=production node dist/index.js"
   },
   "devDependencies": {
+    "@types/jest": "^29.5.11",
     "@types/node": "^18.16.3",
+    "jest": "^29.7.0",
+    "ts-jest": "^29.1.2",
     "typescript": "^5.0.4"
   },
   "dependencies": {
-    "jest": "^29.7.0",
     "mariadb": "^3.1.1"
   }
 }
