--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "start": "NODE_ENV=production node dist/index.js"
   },
   "devDependencies": {
+    "@types/express": "^4.17.21",
     "@types/jest": "^29.5.11",
     "@types/node": "^18.16.3",
     "jest": "^29.7.0",
@@ -16,6 +17,8 @@
     "typescript": "^5.0.4"
   },
   "dependencies": {
+    "dotenv": "^16.4.1",
+    "express": "^4.18.2",
     "mariadb": "^3.1.1"
   }
 }
